feat: add icon and color appearance to projects and tables
